[project]
name = "screenshot-mcp-server"
version = "0.1.0"
description = "MCP server for screenshot capture with Langflow integration"
dependencies = [
    "mcp>=1.0.0",
]
requires-python = ">=3.10"

[project.scripts]
screenshot-server = "screenshot_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
